# TinaIDE

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  ANALYSIS_SUMMARY.txt  ARCHITECTURE_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  COMPILE_FIX.md  README.md  README_EN.md  build.gradle.kts  gradle.properties  gradle_build_log.txt  keystore.properties.example  log.txt  out.txt  settings.gradle.kts  version.properties
.claude/: operations-log.md
.github/workflows/: dev-build.yml  pr-build.yml  receive-release.yml  (+1 more)
app/: build.gradle.kts  lint-baseline.xml  proguard-rules.pro
build-logic/: settings.gradle.kts
core/text-engine/src/main/cpp/: CMakeLists.txt  line_index_kernel_jni.cpp  text_scan_kernel_jni.cpp
docs/: ANDROID_COMPATIBILITY_ANALYSIS.md  Android-SELinux-解决方案.md  Android-SELinux-限制说明.md  Bottom-Panel-Guide.md  CLANG_INTEGRATION_ROADMAP.md  CMake-JNI-实现方案.md  CMake集成完成总结.md  CMake项目支持.md  Clangd-Diagnostics-Analysis.md  EMBEDDED_CLANG_STATUS.md  EMBEDDED_NDK_SHARED_LIBS.md  EMBEDDED_NDK_TOOLS.md  LLD-Process-Isolation.md  LLVM_BUILD_DOCKER.md  LLVM_BUILD_TOOLS.md  LSP-Architecture-Major-Refactor.md  LSP-Completion-Bug-Analysis.md  LSP-Debug-Guide.md  LSP-Integration.md  Native-Linking-Strategies.md  Ninja-JNI-实现完成.md  Ninja-JNI-崩溃分析.md  README.md  Tree-Sitter-Rewrite-Plan.md  android-hosted-llvm-toolchain-analysis.md  clang-android-exec-fix.md  clangd-completion-fast-path.md  documentation-status.md  game-engine-plugin-gui.md  game-engine-plugin-sdl.md  i18n.md  linux-distro-self-hosted-runtime.md  native-toolchain-dual-package-experiment.md  plugin-api-contract.md  proguard-rules-reference.md  project-conventions.md  toolchain-build-guide.md  xmake-android-integration.md  xmake-android-tbox-hook-design.md  开发指南.md  (+4 more)
gradle/: libs.versions.toml
keystore/: README.md
libs/: immersionbar-3.4.6.aar
scripts/: build-and-package-android-toolchain.sh  build-android-tools.sh  build-imgui-android-package.ps1  check-migration-status.sh  repack-toolchain-from-existing-package.sh  repair-sdl3-bundled-package.ps1
scripts/cmake/imgui-android-gl3/: CMakeLists.txt
server/: README.md
tools/: README.md  analyze-apk.ps1  build-and-install-all-abi.ps1  build-apk.ps1  build-release.ps1  check-apk-contents.ps1  check_i18n.py  clean-github-artifacts.ps1  gen_class_index.py  gen_template_icon.py  list-icons.ps1  monitor-toolchain-progress.ps1  run-toolchain-builder.ps1  sync-embedded-ndk.ps1  sync-llvm-build-all.ps1  sync-llvm-build.ps1  sync-llvm-headers.ps1  sync-tina-toolchain-assets.ps1  verify-android-sysroot-assets.ps1
tools/project-templates/sdl3_cmake/: CMakeLists.txt
tools/project-templates/sdl3_cmake/src/: main.cpp
treeview/: build.gradle.kts
(+2025 files in other folders)
